[gd_scene load_steps=3 format=3 uid="uid://cae6flombrjgk"]

[ext_resource type="Script" path="res://UserInterface/WorldCreation.gd" id="1_0t4g1"]
[ext_resource type="Texture2D" uid="uid://l1g06b80dhe8" path="res://Assets/PixelUIButtons/CancelButton.png" id="2_mjge2"]

[node name="WorldCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0t4g1")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.5
offset_top = -212.0
offset_right = 239.5
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="EnterSeed" type="Label" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "ENTER WORLD SEED"

[node name="Seed" type="LineEdit" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
theme_override_icons/clear = ExtResource("2_mjge2")
expand_to_text_length = true
clear_button_enabled = true

[node name="EnterWorldName" type="Label" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "ENTER WORLD NAME"

[node name="WorldNameInput" type="LineEdit" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
theme_override_icons/clear = ExtResource("2_mjge2")
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 79

[node name="BACKBUTTON" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "BACK"

[node name="PLAYBUTON" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "PLAY"

[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/BACKBUTTON" to="." method="_on_backbutton_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/PLAYBUTON" to="." method="_on_playbuton_pressed"]
